Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2899

OSTs can't be used correctly after running sanity test_27y

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.4.0
    • Lustre 2.4.0
    • None
    • 3
    • 6986

      This problem was found during LU-2871 auto test https://maloo.whamcloud.com/test_sessions/3d87c328-832e-11e2-98f5-52540035b04c .

      In that test we have 7 OSTs, but after running sanity test_27y, only 2 OSTs were available.

      This problem is easy to reproduce by adding some scripts in sanity test_27y

      diff --git a/lustre/tests/sanity.sh b/lustre/tests/sanity.sh
      index 16a0410..d28a4ee 100644
      --- a/lustre/tests/sanity.sh
      +++ b/lustre/tests/sanity.sh
      @@ -1577,6 +1577,11 @@ test_27x() {
       run_test 27x "create files while OST0 is degraded"
       
       test_27y() {
      +       local testfile="/mnt/lustre/testfile"
      +       $SETSTRIPE -i 0 -c -1 $testfile
      +       $GETSTRIPE $testfile
      +       rm -fv $testfile
      +
               [ "$OSTCOUNT" -lt "2" ] && skip_env "$OSTCOUNT < 2 OSTs -- skipping" && return
               remote_mds_nodsh && skip "remote MDS with nodsh" && return
               remote_ost_nodsh && skip "remote OST with nodsh" && return
      @@ -1638,6 +1643,10 @@ test_27y() {
                              do_facet $SINGLEMDS lctl --device %$OSC activate
                      fi
              done
      +
      +       $SETSTRIPE -i 0 -c -1 $testfile
      +       $GETSTRIPE $testfile
      +       rm -fv $testfile
       }
       run_test 27y "create files while OST0 is degraded and the rest inactive"
      

      When OSTCOUNT=4, the output is like

      == sanity test 27y: create files while OST0 is degraded and the rest inactive == 22:21:07 (1362147667)
      /mnt/lustre/testfile
      lmm_stripe_count:   4
      lmm_stripe_size:    1048576
      lmm_layout_gen:     0
      lmm_stripe_offset:  0
      	obdidx		 objid		 objid		 group
      	     0	            12	          0xc	             0
      	     1	            66	         0x42	             0
      	     2	            65	         0x41	             0
      	     3	            65	         0x41	             0
      
      removed `/mnt/lustre/testfile'
      lustre-OST0001-osc-MDT0000 is Deactivated:
      lustre-OST0002-osc-MDT0000 is Deactivated:
      lustre-OST0003-osc-MDT0000 is Deactivated:
      lustre-OST0000 is degraded:
      total: 4 creates in 0.01 seconds: 459.66 creates/second
      lustre-OST0000 is recovered from degraded:
      /mnt/lustre/testfile
      lmm_stripe_count:   1
      lmm_stripe_size:    1048576
      lmm_layout_gen:     0
      lmm_stripe_offset:  0
      	obdidx		 objid		 objid		 group
      	     0	            17	         0x11	             0
      
      removed `/mnt/lustre/testfile'
      Resetting fail_loc on all nodes...done.
      PASS 27y (11s)
      

            bobijam Zhenyu Xu
            emoly.liu Emoly Liu
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: