LU-2899 lod: add OSP activation listener

Current code relies on lod_statfs_and_check() to count the number of
activated LOD targets, while lod::lod_stripenr derivation happens
before calling lod_statfs_and_check(), and that makes
lod::lod_stripenr not accurate.

Manually activate/deactivate OSP import should notify LOD device to
update LOD device ::lod_desc::ld_active_tgt_count upon which
lod::lod_stripenr derivation relies.

Signed-off-by: Bobi Jam <bobijam.xu@intel.com>
Change-Id: I37bebc69f876dd68da609fb5180bc6db36f01e84